<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/bgColor">

    <TextView
        android:layout_marginTop="16dp"
        android:id="@+id/updateTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_task"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:textColor="?attr/txtColor"/>

    <EditText
        android:layout_marginTop="16dp"
        android:id="@+id/taskField"
        android:layout_below="@id/updateTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textColor="?attr/txtColor"
        android:textColorHint="?attr/txtColorDone"
        android:hint="@string/hint_task"/>

    <TextView
        android:id="@+id/errorTextTask"
        android:visibility="gone"
        android:layout_below="@id/taskField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/error_task_name"
        android:textColor="#ff0000"/>

    <EditText
        android:id="@+id/dateField"
        android:layout_marginTop="20dp"
        android:layout_below="@id/taskField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textColor="?attr/txtColor"
        android:textColorHint="?attr/txtColorDone"
        android:hint="@string/hint_date"/>

    <TextView
        android:id="@+id/errorTextDate"
        android:visibility="gone"
        android:layout_below="@id/dateField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/error_date"
        android:textColor="#ff0000"/>

    <Spinner
        android:id="@+id/lists_spinner"
        android:layout_below="@id/errorTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"></Spinner>

    <RelativeLayout
        android:id="@+id/btnLayout"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/lists_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">
        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/button_save"/>
        <Button
            android:id="@+id/cancelBtn"
            android:layout_toEndOf="@id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/button_cancel"/>
    </RelativeLayout>



</RelativeLayout>